--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading"></div>
+                <div class="text-center"></div>
                 <div class="masthead-heading text-uppercase" style="color: #345690;">Inverocar<i class="icofont-auto-mobile"></i></div>
             </div>
         </header>
